--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
 dependencies {
 
-//    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -53,4 +53,5 @@ dependencies {
 
     //
     implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.android.databinding:viewbinding:4.0.1'
 }
