[FEAT] plus view price list api 연동 구현

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,14 @@ dependencies {
     //
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.android.databinding:viewbinding:4.0.1'
+
+
+    // 서버 연결을 위한 Retrofit2
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
+    // Retrofit2에서 gson 사용을 위한 컨버터
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    // gson
+    implementation "com.google.code.gson:gson:2.8.6"
 }
