--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ android {
 }
 
 dependencies {
-
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.google.code.gson:gson:2.8.6"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
